# BookingBot

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: backend_CI.yml  black.yml  bot_CI.yml  flake8.yml  mypy.yml  run_tests.yml  tests_CI.yml
src/backend/: .dockerignore  Dockerfile  base_types.py  config.py  pyproject.toml  types.py
src/backend/models/: booking_facilities.py  user.py
src/backend/registries/: interfaces.py
src/backend/registry/: __init__.py  abstract_registry.py  async_mongo_registry.py  mongo_helper.py
src/backend/repositories/: __init__.py  audience.py  reservation.py  user.py
src/backend/schemas/: audience.py  booking_facilities.py  mixins.py  reservation.py  reservations.py  user.py
src/backend/services/: audience.py  booking_facilities.py  catcher_of_errors.py  interfaces.py  reservation.py  user.py
src/bot/: .dockerignore  Dockerfile
tests/backend/: audience_tests.py  reservation_tests.py  useless_test.py
