[tool.poetry]
name = "bookingbot"
version = "0.1.0"
description = ""
authors = ["Eytes <yura.shamanov2000@bk.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
motor = "^3.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.2.6"
black = "^24.3.0"
pytest = "^8.1.1"
mypy = "^1.9.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
disable_error_code = ["import-untyped"]
check_untyped_defs = true
allow_redefinition = true

[tool.flake8]
max_line_length = 88
show_source = true
statistics = true
exclude = [
    ".git",
    "__pycache__"
]

[tool.black]
line_length = 88
check = true
verbose = true
diff = true
color = true
